--- a/app/src/main/res/layout/payload_unhandled.xml
+++ b/app/src/main/res/layout/payload_unhandled.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:textSize="24sp"
-            android:textColor="@color/accentDark"
+            android:textColor="?attr/colorPrimaryDark"
             android:text="Event in progress"/>
 
     </LinearLayout>
