--- a/app/src/main/res/layout/payload_unhandled.xml
+++ b/app/src/main/res/layout/payload_unhandled.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="72dp"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:orientation="vertical"
@@ -16,13 +17,24 @@
         android:layout_marginTop="@dimen/gapMedium"
         android:layout_marginBottom="@dimen/gapSmall">
 
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="24sp"
-            android:textColor="?attr/colorPrimaryDark"
-            android:text="Event in progress"/>
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <com.alorma.github.ui.view.CircularImageView
+                android:layout_width="@dimen/avatar_size_list"
+                android:layout_height="@dimen/avatar_size_list"
+                android:id="@+id/authorAvatar"
+                android:padding="@dimen/gapMedium"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="@dimen/gapMedium"/>
+
+
+        </RelativeLayout>
 
     </LinearLayout>
 </LinearLayout>
