--- a/app/src/main/res/layout/payload_pull_request_event.xml
+++ b/app/src/main/res/layout/payload_pull_request_event.xml
@@ -59,13 +59,28 @@
                 android:layout_alignRight="@+id/authorName"
                 android:layout_alignEnd="@+id/authorName" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/textCommits"
+                android:background="@drawable/bg_event_commits"
+                android:padding="@dimen/gapSmall"
+                android:paddingLeft="@dimen/gapMedium"
+                android:layout_below="@+id/textTitle"
+                android:layout_alignLeft="@+id/authorName"
+                android:layout_alignStart="@+id/authorName"
+                android:layout_marginTop="@dimen/gapMedium"
+                android:textSize="@dimen/textSizeMicro"
+                android:layout_alignRight="@+id/authorName"
+                android:layout_alignEnd="@+id/authorName" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:id="@+id/textDate"
-                android:layout_below="@+id/textTitle"
+                android:layout_below="@+id/textCommits"
                 android:layout_alignLeft="@+id/authorName"
                 android:layout_alignStart="@+id/authorName"
                 android:layout_marginTop="@dimen/gapMedium"
