--- a/app/src/main/res/layout/payload_push.xml
+++ b/app/src/main/res/layout/payload_push.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:orientation="vertical"
@@ -22,49 +22,6 @@
             android:layout_height="wrap_content"
             android:padding="8dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Large Text"
-                android:id="@+id/actionType"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="@dimen/gapMedium"
-                android:layout_marginStart="@dimen/gapMedium"
-                android:paddingTop="0dp"
-                android:textSize="@dimen/textSizeXLarge"
-                android:fontFamily="sans-serif-light"
-                android:textColor="?attr/colorPrimaryDark"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:fontFamily="sans-serif-condensed"
-                android:id="@+id/action"
-                android:layout_below="@+id/actionType"
-                android:layout_alignLeft="@+id/actionType"
-                android:layout_alignStart="@+id/actionType"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="@dimen/gapMedium"
-                android:layout_marginTop="@dimen/gapMedium"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/commits"
-                android:maxLines="2"
-                android:layout_toRightOf="@+id/authorAvatar"
-                android:layout_toEndOf="@+id/authorAvatar"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@+id/authorName"
-                android:layout_alignLeft="@+id/authorName"
-                android:layout_alignStart="@+id/authorName"
-                android:padding="@dimen/gapLarge"/>
-
             <com.alorma.github.ui.view.CircularImageView
                 android:layout_width="@dimen/avatar_size_list"
                 android:layout_height="@dimen/avatar_size_list"
@@ -72,9 +29,9 @@
                 android:padding="@dimen/gapMedium"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:layout_below="@+id/action"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="@dimen/gapMedium"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -84,11 +41,36 @@
                 android:id="@+id/authorName"
                 android:layout_toRightOf="@id/authorAvatar"
                 android:layout_toEndOf="@id/authorAvatar"
-                android:gravity="center"
                 android:layout_marginLeft="@dimen/gapMedium"
                 android:layout_marginStart="@dimen/gapMedium"
-                android:layout_below="@+id/action"
-                />
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/textTitle"
+                android:layout_below="@+id/authorName"
+                android:layout_alignLeft="@+id/authorName"
+                android:layout_alignStart="@+id/authorName"
+                android:layout_marginTop="@dimen/gapMedium"
+                android:textSize="@dimen/textSizeMicro"
+                android:layout_alignRight="@+id/authorName"
+                android:layout_alignEnd="@+id/authorName" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/textDate"
+                android:layout_below="@+id/textTitle"
+                android:layout_alignLeft="@+id/authorName"
+                android:layout_alignStart="@+id/authorName"
+                android:layout_marginTop="@dimen/gapMedium"
+                android:textSize="@dimen/textSizeSmall"
+                android:layout_alignRight="@+id/authorName"
+                android:layout_alignEnd="@+id/authorName" />
 
         </RelativeLayout>
 
